tree-sitter-p4/grammar.js
        p4program: $ => optional(repeat(seq(choice($.declaration, $.instantiation), $._semicolon))),

        // Common

        // Common - Parameters
        parameters: $=> seq('(', optional($.parameter_list), ')'),

        typeRef: $ => choice($.baseType, $.type_identifier),
        baseType: $ => choice($.bool, $.error, $.string, $.int, $.bit /* omitting "templated" types" */),
        parserType: $ => seq(optional($.annotations), $.parser, field('parser_name', $.identifier), optional($.typeParameters), $.parameters),

        // Mark with higher precedence so that the local states are preferred when parsing!
        // TODO: Test!
        parserStates: $ => repeat1($.parserState),
        parserState: $ => seq(optional($.annotations), $.state, $.identifier, '{', optional($.parserStatements), $.parserTransitionStatement, '}'),

        selectBody: $ => repeat1(seq($.selectCase, $._semicolon)),
        selectCase: $ => seq($.keysetExpression, $.colon, $.identifier),

        declaration: $ => seq(choice($.parserDeclaration, $.parserTypeDeclaration, $.type_declaration, $.function_declaration, $.control_declaration)),

        function_declaration: $=> seq($.typeRef, $.identifier, $.parameters, $.statement),

        // Make separate productions for the parser type and the parser type declaration because the latter can have type parameters.
        parserDeclaration: $ => seq($.parserType, '{', optional($.parserLocalElements), $.parserStates, '}'),

        variableDeclaration: $ => seq(optional($.annotations), $.typeRef, field('variable_name', $.identifier), optional(seq($.assignment, $.expression)), $._semicolon),

        // Control declarations
        statements: $ => repeat1($.statement),
        statement: $ => choice($.conditionalStatement, $.blockStatement, $.expressionStatement, $.assignmentStatement, $.variableDeclaration, $.return_statement, $.exit_statement),// Limited, so far.
        blockStatement: $ => seq(optional($.annotations), '{', optional($.statements), '}'),
        conditionalStatement: $ => choice(prec(1, seq($.if, '(', $.expression, ')', $.statement)), prec(2, seq($.if, '(', $.expression, ')', $.statement, $.else, $.statement))),
        assignmentStatement: $=> seq($.expression, $.assignment, $.expression, $._semicolon),
        return_statement: $=> seq($._return, $.expression, $._semicolon),
        parserStatements: $ => repeat1($.parserStatement),
        parserStatement: $ => choice($.conditionalStatement, $.parserBlockStatement, $.expressionStatement, $.assignmentStatement, $.variableDeclaration), // Limited, so far.
        parserTransitionStatement: $ => seq($.transition, $.transitionSelectionExpression, $._semicolon),

        // Expressions
        expression: $ => choice($.grouped_expression, $.simple_expression),
        simple_expression: $ => choice($.identifier, $.integer, $.booleanLiteralExpression, $.string_literal, $.binaryOperatorExpression, $.arrayAccessExpression, $.fieldAccessExpression, $.function_call), // Very limited.
        booleanLiteralExpression: $ => choice($.true, $.false),
        selectExpression: $ => seq($.select, '(', $.expression, ')', '{', $.selectBody, '}'), // TODO: Should be expression list and not just a single expression
        transitionSelectionExpression: $ => choice($.identifier, $.selectExpression),
        keysetExpression: $ => choice($.expression, $.default_keyset),
        _semicolon: $ => ";",
        colon: $ => ":",
        assignment: $ => "=",
        bool: $ => "bool",
        else: $ => "else",
        false: $ => "false",
        if: $ => "if",
        int: $ => "int",
        parser: $ => "parser",
        _return: $ => "return",
        select: $ => "select",
        state: $ => "state",
        string: $ => "string",
        transition: $ => "transition",
        true: $ => "true",
        identifier: $ => /[A-Za-z_]+/,
        string_literal: $ => /"[^"]*"/,
        integer: $ => /[0-9]+/,
        default_keyset: $=> '_',
