tree-sitter-p4/test/corpus/transitions.txt
=========================
Simple Transition Statement (To Identifier)
=========================
parser simple() {
  state start {
    transition accept;
  }
};

---
(p4program
 (declaration
  (parserDeclaration
   (parserType
    (parser)
    (identifier)
   )
   (parserStates
    (parserState
     (state)
     (identifier)
     (parserTransitionStatement
      (transition)
      (transitionSelectionExpression
       (identifier)
      )
     )
    )
   )
  )
 )
)

=========================
Simple Transition Statement (To Select Expression)
=========================
parser simple() {
  state start {
    transition select (se) {
      true: next_state;
    };
  }
};

---
(p4program
 (declaration
  (parserDeclaration
   (parserType
    (parser)
    (identifier)
   )
   (parserStates
    (parserState
     (state)
     (identifier)
     (parserTransitionStatement
      (transition)
      (transitionSelectionExpression
       (selectExpression
        (select)
        (expression
         (simple_expression
          (identifier)
         )
        )
        (selectBody
         (selectCase
          (keysetExpression
           (expression
            (simple_expression
             (booleanLiteralExpression
              (true)
             )
            )
           )
          )
          (colon)
          (identifier)
         )
        )
       )
      )
     )
    )
   )
  )
 )
)

=========================
Simple Transition Statement (To Select Expression With Default)
=========================
parser simple() {
  state start {
    transition select (se) {
      _: next_state;
    };
  }
};

---
(p4program
 (declaration
  (parserDeclaration
   (parserType
    (parser)
    (identifier)
   )
   (parserStates
    (parserState
     (state)
     (identifier)
     (parserTransitionStatement
      (transition)
      (transitionSelectionExpression
       (selectExpression
        (select)
        (expression
         (simple_expression
          (identifier)
         )
        )
        (selectBody
         (selectCase
          (keysetExpression
           (default_keyset)
          )
          (colon)
          (identifier)
         )
        )
       )
      )
     )
    )
   )
  )
 )
)
